# discord-static-streamer-bot

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: api.rs  handler.rs  main.rs  voice_manager.rs
