[package]
name = "discord-static-streamer"
version = "0.1.0"
authors = ["Fedorov Anton <fapspirit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.101", features = ["derive"] }

[dependencies.serenity]
version = "0.8"
features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]
